--- a/frontend/src/components/ProductList/index.module.css
+++ b/frontend/src/components/ProductList/index.module.css
@@ -1,5 +1,6 @@
 .main {
   margin-left: 300px;
+  z-index: 1;
 }
 
 .pagination {
